--- a/layouts/partials/tinylytics.html
+++ b/layouts/partials/tinylytics.html
@@ -1,4 +1,4 @@
 {{ with .Site.Params.site_id }}
-<!-- Tinylytics Web Analytics --><script src="https://tinylytics.app/embed/{"token": "{{ . }}"}.js" defer></script><!-- End Tinylytics Web Analytics -->
+<!-- Tinylytics Web Analytics --><script src="https://tinylytics.app/embed/{"site_id": "{{ . }}"}.js" defer></script><!-- End Tinylytics Web Analytics -->
 {{ end }}
 
