--- a/layouts/partials/tinylytics.html
+++ b/layouts/partials/tinylytics.html
@@ -1,5 +1,5 @@
 {{ if isset . "site_id" }}
     {{ with .Site.Params.site_id }}
-    <!-- Tinylytics Web Analytics --><script src="https://tinylytics.app/embed/{{$context.Site.Params.site_id}}.js" defer></script><!-- End Tinylytics Web Analytics -->
+    <!-- Tinylytics Web Analytics --><script src="https://tinylytics.app/embed/{{.Site.Params.site_id}}.js" defer></script><!-- End Tinylytics Web Analytics -->
     {{ end }}
 {{ end }}
