--- a/layouts/partials/tinylytics.html
+++ b/layouts/partials/tinylytics.html
@@ -1,3 +1,3 @@
-{{ if isset .Site.Params.site_id }}
+{{ if ne (.Site.Params.site_id | default "") "" }}
     <!-- Tinylytics Web Analytics --><script src="https://tinylytics.app/embed/{{.Site.Params.site_id}}.js" defer></script><!-- End Tinylytics Web Analytics -->
 {{ end }}
