--- a/layouts/partials/tinylytics.html
+++ b/layouts/partials/tinylytics.html
@@ -1,10 +1,25 @@
 {{ if ne (.Site.Params.site_id | default "") "" }}
     
-    {{ .Scratch.Set "hits" "" }}
-    {{ if .Site.Params.show_hits }}
-        {{ .Scratch.Set "hits" "?show_hits" }}
+    {{ $p := newScratch }}
+    {{ $p.Set "params" "" }}
+
+    {{ if or (.Site.Params.show_hits) (.Site.Params.show_kudos) }}
+        {{ $p.Add "params" "?" }}
+        {{ if and (.Site.Params.show_hits) (.Site.Params.show_kudos) }}
+            {{ $p.Add "params" "hits&kudos" }}
+        {{ else if .Site.Params.show_hits }}
+            {{ $p.Add "params" "hits" }}
+        {{ else if .Site.Params.show_kudos }}
+            {{ $p.Add "params" "kudos" }}
+        {{ end }}
+
+        {{ if and (.Site.Params.show_kudos) (ne (.Site.Params.kudos_label | default "") "") }}
+            {{ $p.Add "params" "=" }}
+            {{ $p.Add "params" .Site.Params.kudos_label }}
+        {{ end }}
+
     {{ end }}
 
-<script src='https://tinylytics.app/embed/{{ .Site.Params.site_id }}.js{{ .Scratch.Get "hits" }}' defer></script>
+<script src='https://tinylytics.app/embed/{{ .Site.Params.site_id }}.js{{ $p.Get "params" }}' defer></script>
 
 {{ end }}
