Add shortcode functionality and fix URL encoding.

--- a/layouts/partials/tinylytics.html
+++ b/layouts/partials/tinylytics.html
@@ -20,6 +20,6 @@
 
     {{ end }}
 
-<script src='https://tinylytics.app/embed/{{ .Site.Params.site_id }}.js{{ $p.Get "params" }}' defer></script>
+<script src='https://tinylytics.app/embed/{{ .Site.Params.site_id }}.js{{ htmlUnescape $p.Get "params" | safeURL }}' defer></script>
 
 {{ end }}
