--- a/layouts/shortcodes/tinykudos.html
+++ b/layouts/shortcodes/tinykudos.html
@@ -1,1 +1,1 @@
-<button class="tinylytics_kudos" data-path="{{ .RelPermalink }}"></button>
+<button class="tinylytics_kudos" data-path="{{ .Page.RelPermalink }}"></button>
