updates to hits shortcode

--- a/layouts/shortcodes/tinyhits.html
+++ b/layouts/shortcodes/tinyhits.html
@@ -1,1 +1,1 @@
-<span class="tinylytics_hits"></span>
+<a href="https://tinylytics.app" title="Stats via Tinylytics">Tinylytics</a>: </span><span class="tinylytics_hits"></span>
