--- a/layouts/shortcodes/tinyhits.html
+++ b/layouts/shortcodes/tinyhits.html
@@ -1,1 +1,3 @@
-<a href="https://tinylytics.app" title="Stats via Tinylytics">Tinylytics</a>: </span><span class="tinylytics_hits"></span>
+{{ if and (ne (.Site.Params.site_id | default "") "") (.Site.Params.show_hits) }}
+<span class="tinylytics_hits"></span>
+{{ end }}
