--- a/layouts/shortcodes/tinykudos.html
+++ b/layouts/shortcodes/tinykudos.html
@@ -1,1 +1,3 @@
+{{ if and (ne (.Site.Params.site_id | default "") "") (.Site.Params.show_kudos) }}
 <button class="tinylytics_kudos" data-path="{{ .Page.RelPermalink }}"></button>
+{{ end }}
