--- a/layouts/partials/tinyhits/embed.html
+++ b/layouts/partials/tinyhits/embed.html
@@ -1,4 +1,4 @@
 {{ $context := .context }}
 {{ if and (ne ($context.Site.Params.site_id | default "") "") ($context.Site.Params.show_hits) }}
-<a href="https://tinylytics.app" title="Stats via Tinylytics">Tinylytics</a>: </span><span class="tinylytics_hits"></span>
+<span class="tiny_counter"><a href="https://tinylytics.app" title="Stats via Tinylytics">Tinylytics</a>: <span class="tinylytics_hits"></span></span>
 {{ end }}
