--- a/layouts/partials/tinylytics.html
+++ b/layouts/partials/tinylytics.html
@@ -1,16 +1,16 @@
 {{ if ne (.Site.Params.site_id | default "") "" }} 
-    {{ $queryParams := "" }}
+    {{ $queryParameters := "" }}
     {{ if or (.Site.Params.show_hits) (.Site.Params.show_kudos) }}
         {{ if and (.Site.Params.show_hits) (.Site.Params.show_kudos) }}
-            {{ $queryParams = ( print "?hits&kudos") }}
+            {{ $queryParameters = ( print "?hits&kudos") }}
         {{ else if .Site.Params.show_hits }}
-            {{ $queryParams = ( print "?hits") }}
+            {{ $queryParameters = ( print "?hits") }}
         {{ else if .Site.Params.show_kudos }}
-            {{ $queryParams = ( print "?kudos") }}
+            {{ $queryParameters = ( print "?kudos") }}
         {{ end }}
         {{ if and (.Site.Params.show_kudos) (ne (.Site.Params.kudos_label | default "") "") }}
-            {{ $queryParams = ( print $queryParams "=" .Site.Params.kudos_label ) }}
+            {{ $queryParameters = ( print $queryParameters "=" .Site.Params.kudos_label ) }}
         {{ end }}
     {{ end }}
-    <script src='https://tinylytics.app/embed/{{ .Site.Params.site_id }}.js{{ $queryParams }}' defer></script>
+    <script src='https://tinylytics.app/embed/{{ .Site.Params.site_id }}.js{{ $queryParameters }}' defer></script>
 {{ end }}
