--- a/layouts/partials/tinyhits/embed.html
+++ b/layouts/partials/tinyhits/embed.html
@@ -1,7 +1,13 @@
 {{ $context := .context }}
 {{ if and (ne ($context.Site.Params.site_id | default "") "") ($context.Site.Params.show_hits) }}
-<span class="tiny_counter"><a href="https://tinylytics.app" title="Stats via Tinylytics">Tinylytics</a>: <span class="tinylytics_hits"></span></span>
+    <span class="tiny_counter"><a href="https://tinylytics.app" title="Stats via Tinylytics">Tinylytics</a>: <span class="tinylytics_hits"></span></span>
 {{ end }}
 {{ if and (ne ($context.Site.Params.site_id | default "") "") ($context.Site.Params.show_uptime) }}
-<span class="tiny_uptime">Uptime: <span class="tinylytics_uptime"></span></span>
+    <span class="tiny_uptime">Uptime: <span class="tinylytics_uptime"></span></span>
+{{ end }}
+{{ if and (ne ($context.Site.Params.site_id | default "") "") ($context.Site.Params.show_webring) }}
+    <span class="tiny_webring"><a href="" class="tinylytics_webring">{{ $context.Site.Params.webring_label }}</a></span>
+{{ end }}
+{{ if and (ne ($context.Site.Params.site_id | default "") "") ($context.Site.Params.show_uptime) }}
+    <span class="tiny_countries"><span class="tinylytics_countries"></span></span>
 {{ end }}
