more refactoring of stuff

--- a/layouts/partials/tinylytics.html
+++ b/layouts/partials/tinylytics.html
@@ -6,7 +6,7 @@
     {{ if .Site.Params.show_countries }} {{ $url = ( print $url "countries&") }} {{ end }}
     {{ if and .Site.Params.show_webring (not (.Site.Params.webring_avatar)) }} {{ $url = ( print $url "webring&" ) }} {{ end }}
     {{ if and .Site.Params.show_webring .Site.Params.webring_avatar }} {{ $url = ( print $url "webring=avatars&" ) }} {{ end }}
-    {{ if and .Site.Params.show_kudos (not (isset .Site.Params.kudos_label "")) }} {{ $url = ( print $url "kudos&") }} {{ end }}
+    {{ if and .Site.Params.show_kudos (not (ne (.Site.Params.kudos_label | default "") "")) }} {{ $url = ( print $url "kudos&") }} {{ end }}
     {{ if and .Site.Params.show_kudos (ne (.Site.Params.kudos_label | default "") "") }} {{ $url = ( print $url "kudos=" .Site.Params.kudos_label ) }} {{ end }}
     <script defer src='{{ strings.TrimRight "?&" $url }}'></script>
 {{ end }}
