--- a/layouts/partials/tinyhits/embed.html
+++ b/layouts/partials/tinyhits/embed.html
@@ -1,15 +1,15 @@
-{{ $context := .context }}
-{{ if ne ($context.Site.Params.site_id | default "") "" }}
-    {{ if $context.Site.Params.show_hits }}
+{{- $context := .context }}
+{{- if ne ($context.Site.Params.site_id | default "") "" }}
+    {{- if $context.Site.Params.show_hits }}
         <span class="tiny_counter">{{ if ($context.Site.Params.public_stats) }}<a href="" target="_blank" class="tinylytics_public_stats">{{ if (ne ($context.Site.Params.stats_label | default "") "") }}{{ $context.Site.Params.stats_label }}{{else}}Site Stats{{end}}</a>:{{ else }}<a href="https://tinylytics.app" target="_blank" title="Stats via Tinylytics">Tinylytics</a>:{{ end }}&nbsp;<span class="tinylytics_hits"></span></span>
-    {{ end }}
-    {{ if $context.Site.Params.show_uptime }}
+    {{- end }}
+    {{- if $context.Site.Params.show_uptime }}
         <span class="tiny_uptime">Uptime: <span class="tinylytics_uptime"></span></span>
-    {{ end }}
-    {{ if $context.Site.Params.show_webring }}
+    {{- end }}
+    {{- if $context.Site.Params.show_webring }}
         <span class="tiny_webring"><a href="" class="tinylytics_webring" target="_blank" title="Tinylytics Webring">{{ if not (ne ($context.Site.Params.webring_label | default "") "") }}🕸️{{ end }}{{ if $context.Site.Params.webring_avatar }}<img class="tinylytics_webring_avatar" src="" style="display:none;"/>{{ end }}{{ if not (ne ($context.Site.Params.webring_label | default "") "") }}💍{{ end }}{{ if ne ($context.Site.Params.webring_label | default "") "" }}<span>{{ $context.Site.Params.webring_label }}</span>{{ end }}</a></span>
-    {{ end }}
-    {{ if $context.Site.Params.show_countries }}
+    {{- end }}
+    {{- if $context.Site.Params.show_countries }}
         <span class="tiny_countries"><span class="tinylytics_countries"></span></span>
-    {{ end }}
-{{ end }}
+    {{- end }}
+{{- end }}
